--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.ProfilePage.ProfileActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="15dp"
+        android:onClick="selectImage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/color"
+        app:srcCompat="@android:drawable/ic_menu_upload"
+        tools:srcCompat="@android:drawable/ic_menu_upload" />
+
     <TextView
         android:id="@+id/color"
         android:layout_width="wrap_content"
@@ -23,26 +35,28 @@
         android:id="@+id/commentText"
         android:layout_width="383dp"
         android:layout_height="180dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
         android:gravity="top"
-        android:hint="Kendinizi tanıtın.."
 
+        android:hint="Kendinizi tanıtın.."
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/color"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
         tools:ignore="RtlCompat" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginBottom="100dp"
         android:onClick="upload"
         android:text="Kaydet"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentText" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
