--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="5dp"
     android:layout_marginBottom="10dp"
     app:cardBackgroundColor="@color/cardview_light_background"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginTop="5dp"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        >
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:id="@+id/cityTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="@+id/recyclerviewRowCommentText"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerviewRowCommentText" />
 
         <TextView
             android:id="@+id/recyclerviewRowUseremailText"
@@ -27,19 +34,19 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="40dp"
             android:text="TextView"
-            android:textSize="19sp"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-        android:id="@+id/recyclerviewRowCommentText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="TextView"
-        android:textSize="19sp"
-        app:layout_constraintStart_toStartOf="@+id/recyclerviewRowUseremailText"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerviewRowUseremailText" />
+            android:id="@+id/recyclerviewRowCommentText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="TextView"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/recyclerviewRowUseremailText"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerviewRowUseremailText" />
 
         <TextView
             android:id="@+id/dateTextView"
@@ -53,4 +60,5 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
