--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -87,7 +87,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerViewComment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="10dp"
@@ -105,6 +105,7 @@
         android:hint="Yorum yap..."
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_alignParentBottom="true"
         app:layout_constraintEnd_toStartOf="@+id/imageButton"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -153,5 +154,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:srcCompat="?android:attr/galleryItemBackground"
         tools:srcCompat="@tools:sample/avatars" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout >
     </ScrollView>
+
